# code-generator-mcp

./: .env.local  README.md  docker-compose.yml
code-structure-mcp-server/: Dockerfile  code_structure_server.py  pyproject.toml  requirements.txt
coder-mcp/: Dockerfile  pyproject.toml  server.py
directory-tree-visualizer/: README.md  directory_tree.py  main.py  mcp_server.py  pyproject.toml
file-editor-mcp-server/: file_editor_server.py  pyproject.toml
file-reader-mcp-server/: Dockerfile  file_reader_server.py  pyproject.toml  requirements.txt
file_reader/: file_reader.py  pyproject.toml
lc/: main.py  mcp.ipynb  pyproject.toml
markitdown-server/: Dockerfile  README.md  main.py  pyproject.toml
markitdown-server/static/: index.html
planer-mcp/: Dockerfile  pyproject.toml
planer-mcp/src/: file_icon.py  ignore.py  read_file.py  server.py  tree.py
planner-mcp/: pyproject.toml
planner-mcp/src/: count_token.py  read_file.py  search.py  server.py  tree_dir.py
research-mcp/: Dockerfile  pyproject.toml  server.py
researcher-mcp/: Dockerfile  pyproject.toml  server.py
sample/: package-lock.json
sample/app/: page.tsx
searxng/: settings.yml
