[project]
name = "markitdown-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "markitdown[all]>=0.1.1",
    "openai>=1.75.0",
    "playwright>=1.51.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
]
